Closed
Bug 759948
Opened 13 years ago
Closed 13 years ago
libstagefright based media playback doesn't receive ended event when complete on B2G
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: cajbir, Assigned: cajbir)
References
Details
Attachments
(1 file)
4.27 KB,
patch
|
eflores
:
review+
|
Details | Diff | Splinter Review |
When playing an H.264 video with bug 714408 applied the video does not end correctly once playback is complete. The controls continue to show the paused graphic and the video cannot be restarted by toggling pause/play.
Steps to reproduce:
1. Go to http://cd.pn/b2 in the B2G browser
2. Press Play
3. Wait for video to end (3:02 on the timeline)
What happens:
Video display shows a black frame. Controls show the "Pause" button. Toggling the button does nothing.
What should happen:
Controls show the "Play" button. Pressing restarts the video.
Assignee | ||
Comment 1•13 years ago
|
||
Mark the audio and video streams as finished in the plugin reader when the plugin reports the stream as complete. Tidy up the audio reading code in omx plugin to make this clearer.
Assignee | ||
Updated•13 years ago
|
blocking-basecamp: --- → ?
blocking-kilimanjaro: --- → ?
Attachment #628590 -
Flags: review?(eflores) → review+
Assignee | ||
Comment 2•13 years ago
|
||
Target Milestone: --- → mozilla15
![]() |
||
Comment 3•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
blocking-basecamp: ? → +
You need to log in
before you can comment on or make changes to this bug.
Description
•