Bug 759948 - libstagefright based media playback doesn't receive ended event when complete on B2G - r=edwin