content/media/plugins/nsMediaPluginReader.cpp
@@ -137,6 +137,7 @@ bool nsMediaPluginReader::DecodeVideoFrame(bool &aKeyframeSkip,
         mVideoQueue.Push(mLastVideoFrame);
         mLastVideoFrame = NULL;
       }
+      mVideoQueue.Finish();
       return false;
     }
     mVideoSeekTimeUs = -1;
@@ -245,6 +246,7 @@ bool nsMediaPluginReader::DecodeAudioData()
   // Read next frame
   MPAPI::AudioFrame frame;
   if (!mPlugin->ReadAudio(mPlugin, &frame, mAudioSeekTimeUs)) {
+    mAudioQueue.Finish();
     return false;
   }
   mAudioSeekTimeUs = -1;
